// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartGrid - default should render a full month overview chart grid 1`] = `
<svg
  id="all-days"
>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-01-2018"
      rx="4"
      ry="4"
      width="40"
      x="40"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-02-2018"
      rx="4"
      ry="4"
      width="40"
      x="80"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-03-2018"
      rx="4"
      ry="4"
      width="40"
      x="120"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-04-2018"
      rx="4"
      ry="4"
      width="40"
      x="160"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-05-2018"
      rx="4"
      ry="4"
      width="40"
      x="200"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-06-2018"
      rx="4"
      ry="4"
      width="40"
      x="240"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-07-2018"
      rx="4"
      ry="4"
      width="40"
      x="280"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-08-2018"
      rx="4"
      ry="4"
      width="40"
      x="40"
      y="100"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-09-2018"
      rx="4"
      ry="4"
      width="40"
      x="80"
      y="100"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-10-2018"
      rx="4"
      ry="4"
      width="40"
      x="120"
      y="100"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-11-2018"
      rx="4"
      ry="4"
      width="40"
      x="160"
      y="100"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-12-2018"
      rx="4"
      ry="4"
      width="40"
      x="200"
      y="100"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-13-2018"
      rx="4"
      ry="4"
      width="40"
      x="240"
      y="100"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-14-2018"
      rx="4"
      ry="4"
      width="40"
      x="280"
      y="100"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-15-2018"
      rx="4"
      ry="4"
      width="40"
      x="40"
      y="140"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-16-2018"
      rx="4"
      ry="4"
      width="40"
      x="80"
      y="140"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-17-2018"
      rx="4"
      ry="4"
      width="40"
      x="120"
      y="140"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-18-2018"
      rx="4"
      ry="4"
      width="40"
      x="160"
      y="140"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-19-2018"
      rx="4"
      ry="4"
      width="40"
      x="200"
      y="140"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-20-2018"
      rx="4"
      ry="4"
      width="40"
      x="240"
      y="140"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-21-2018"
      rx="4"
      ry="4"
      width="40"
      x="280"
      y="140"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-22-2018"
      rx="4"
      ry="4"
      width="40"
      x="40"
      y="180"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-23-2018"
      rx="4"
      ry="4"
      width="40"
      x="80"
      y="180"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-24-2018"
      rx="4"
      ry="4"
      width="40"
      x="120"
      y="180"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-25-2018"
      rx="4"
      ry="4"
      width="40"
      x="160"
      y="180"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-26-2018"
      rx="4"
      ry="4"
      width="40"
      x="200"
      y="180"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-27-2018"
      rx="4"
      ry="4"
      width="40"
      x="240"
      y="180"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-28-2018"
      rx="4"
      ry="4"
      width="40"
      x="280"
      y="180"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-29-2018"
      rx="4"
      ry="4"
      width="40"
      x="40"
      y="220"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-30-2018"
      rx="4"
      ry="4"
      width="40"
      x="80"
      y="220"
    />
  </g>
  <g>
    <rect
      class="day"
      height="40"
      id="day_07-31-2018"
      rx="4"
      ry="4"
      width="40"
      x="120"
      y="220"
    />
  </g>
</svg>
`;

exports[`ChartGrid - default should render a full year overview chart grid 1`] = `
<svg
  id="all-days"
>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-01-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="40"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-02-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="40"
      y="75"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-03-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="40"
      y="90"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-04-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="40"
      y="105"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-05-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="40"
      y="120"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-06-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="40"
      y="135"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-07-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="40"
      y="150"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-08-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="55"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-09-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="55"
      y="75"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-10-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="55"
      y="90"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-11-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="55"
      y="105"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-12-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="55"
      y="120"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-13-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="55"
      y="135"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-14-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="55"
      y="150"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-15-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="70"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-16-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="70"
      y="75"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-17-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="70"
      y="90"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-18-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="70"
      y="105"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-19-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="70"
      y="120"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-20-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="70"
      y="135"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-21-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="70"
      y="150"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-22-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="85"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-23-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="85"
      y="75"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-24-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="85"
      y="90"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-25-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="85"
      y="105"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-26-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="85"
      y="120"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-27-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="85"
      y="135"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-28-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="85"
      y="150"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-29-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="100"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-30-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="100"
      y="75"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="7"
      height="15"
      id="day_07-31-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="100"
      y="90"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-01-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="122.5"
      y="105"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-02-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="122.5"
      y="120"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-03-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="122.5"
      y="135"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-04-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="122.5"
      y="150"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-05-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="137.5"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-06-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="137.5"
      y="75"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-07-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="137.5"
      y="90"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-08-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="137.5"
      y="105"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-09-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="137.5"
      y="120"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-10-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="137.5"
      y="135"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-11-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="137.5"
      y="150"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-12-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="152.5"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-13-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="152.5"
      y="75"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-14-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="152.5"
      y="90"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-15-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="152.5"
      y="105"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-16-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="152.5"
      y="120"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-17-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="152.5"
      y="135"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-18-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="152.5"
      y="150"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-19-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="167.5"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-20-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="167.5"
      y="75"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-21-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="167.5"
      y="90"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-22-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="167.5"
      y="105"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-23-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="167.5"
      y="120"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-24-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="167.5"
      y="135"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-25-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="167.5"
      y="150"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-26-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="182.5"
      y="60"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-27-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="182.5"
      y="75"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-28-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="182.5"
      y="90"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-29-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="182.5"
      y="105"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-30-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="182.5"
      y="120"
    />
  </g>
  <g>
    <rect
      class="day"
      data-month="8"
      height="15"
      id="day_08-31-2018"
      rx="1.5"
      ry="1.5"
      width="15"
      x="182.5"
      y="135"
    />
  </g>
</svg>
`;
